--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,7 @@
 	font-style: normal;
 	color: #999999;
 }
-.img {
-	max-width: 100%;
-	transition: all 0.3s ease-out 0s;
-}
+
 .f-left {
 	float: left
 }
@@ -308,7 +305,10 @@ a{
 .bg-img{
 	background-image: url(../img/new-callection/st-banner-home1.png);
 	width: 100%;
-	height: 100vh;
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 
@@ -317,6 +317,20 @@ a{
 
 
 /* header-top-area-css-code-start */
+.header-sticky{
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	z-index: 999;
+	box-shadow: -5px 31px 24px -10px rgba(13,8,8,0.67);
+	-webkit-box-shadow: -5px 31px 24px -10px rgba(13,8,8,0.67);
+	-moz-box-shadow: -5px 31px 24px -10px rgba(13,8,8,0.67);
+}
+
+
+
 .cur-lang ul {
 	display: inline-block;
 	margin-right: 20px;
@@ -433,6 +447,7 @@ a{
 	transform: scaleY(0);
 	transform-origin: top;
 	transition: all 0.3s ease 0s;
+	z-index: 9;
 }
 
 .my-account:hover ul{transform: scaleY(1);}
@@ -484,13 +499,15 @@ a{
 	margin-top: 10px;
 	position: absolute;
 	top: 100%;
-	right: -77px;
-	min-width: 350px;
+	right: -67px;
+	width: 308px;
 	background: #ddd;
 	padding: 20px;
 	transition: all 0.3s ease 0s;
 	transform-origin: top;
 	transform: scaleY(0);
+	z-index: 9;
+	overflow: hidden;
 }
 
 .my-cart:hover ul{transform: scaleY(1);}
@@ -508,7 +525,7 @@ a{
 }
 
 .cart-title a {
-	font-size: 17px;
+	font-size: 15px;
 	color: #000;
 	font-weight: 500;
 }
@@ -533,6 +550,29 @@ a{
 
 
 /* .main-manu-area-css-code-start */
+/* mainmanu-css */
+.mobile-menu h1 {
+	color: #fff;
+	font-weight: 700;
+	font-size: 30px;
+}
+
+.mean-container a.meanmenu-reveal {
+	border: 1px solid #fff;
+	color: #fff;
+	margin-top: 14px;
+}
+
+.mean-container a.meanmenu-reveal span {
+	background: #fff none repeat scroll 0 0;
+}
+
+.mean-container .mean-nav {
+	margin-top: 62px;
+}
+
+
+
 .main-manu-border{
 	border-top: 1px solid #999999 ;
 	background-color: #323333;
@@ -674,7 +714,8 @@ a{
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
-	min-height: 620px;
+	max-height: 620px;
+	width: 100%;
 }
 
 .single-slider img{
@@ -693,8 +734,8 @@ a{
 	position: relative;
 	
 }
-.single-banner a img{
-	min-width: 100%;
+.single-banner a img {
+	width: 100%;
 }
 
 .single-banner a::before{
@@ -1078,9 +1119,12 @@ a{
 /* many-area-css-code-start */
 .single-many-item {
 	display: flex;
-	padding: 15px 20px;
+	width: 100%;
+	height: 100px;
+	text-align: center;
 	align-content: center;
 	border: 1px solid #777;
+	align-items: center;
 }
 
 .many-text{
@@ -1088,7 +1132,7 @@ a{
 }
 
 .parent .col-xl-4:nth-child(2) .many-text {
-	margin-left: -6px;
+	margin-left: 10px;
 }
 
 .many-text h3 {
@@ -1160,6 +1204,10 @@ a{
 	margin-bottom: 12px;
 	display: block;
 	margin-left: 30px;
+}
+
+.parent .col-xl-2 .footer-widget:last-child a{
+	margin-left: 0;
 }
 
 
